fix(dhis2): point geometries not syncing properly to dhis2